--- a/index.html
+++ b/index.html
@@ -6,8 +6,36 @@
     <title>Intro to HTMl</title>
 </head>
 <body>
- <p>
-    p>
+ <!-- <p> Hello, This is the First part of the paragraph<p> -->
+    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi tempore ex commodi quidem laboriosam nobis saepe illo dolore rerum laudantium dignissimos similique architecto ullam eius maiores, beatae voluptatem! At, delectus.
+    Natus recusandae nostrum excepturi deserunt numquam consequatur, corrupti esse! Consectetur deserunt tempore aspernatur asperiores assumenda dicta cupiditate voluptas quod, repellendus non dolor! Sed, autem. Sit quia aperiam minima culpa consequatur.
+    Numquam excepturi itaque tempora cupiditate neque error possimus doloribus cumque perferendis fuga distinctio facilis eius ex accusantium minus odio officia, dolor sunt ipsum quae explicabo vero deleniti quod! Accusamus, nam?
+    Excepturi saepe alias dolorem corporis temporibus hic, culpa rerum magnam ea consequuntur voluptas quasi. Aperiam sequi harum labore, optio vel consectetur dolore? Architecto dolorum sed omnis, aliquam tempora nostrum vitae.<br>
+    Eaque, officia. Accusamus laudantium rem ratione debitis, fugit sint numquam nobis cum a exercitationem provident deserunt, ipsum nesciunt libero corporis beatae enim. Facilis, reiciendis! Distinctio cumque error temporibus laudantium. Voluptatibus.
+    Praesentium atque minima sed perspiciatis. Asperiores neque obcaecati, sunt non placeat dolorem sint quo officia amet ex in magnam mollitia voluptatum, modi nemo. Eos, quae provident nihil voluptas numquam blanditiis.
+    Quidem nemo, veritatis eligendi ratione sunt nesciunt tempore harum aut sed, quos assumenda quo. Eligendi, nesciunt hic. Libero non necessitatibus harum! Nobis esse eos sit saepe tempore repudiandae. Impedit, omnis.<br>
+    Ipsam aliquid blanditiis deserunt voluptatum quod? Recusandae perferendis facere aut repellat. Cumque officia laborum sequi praesentium, quia rem odio accusamus rerum blanditiis eius? Assumenda porro sunt repellat aliquam laudantium totam?
+    Nostrum eligendi commodi, delectus maxime perferendis iure, quaerat at repellat fugit voluptas nam temporibus eius, non modi omnis quasi aut eum saepe? Voluptatum ipsum dolorum error vero voluptas ea delectus!
+    Sit atque iure eveniet, ad eum neque maxime distinctio debitis consectetur explicabo dolorem voluptatum consequatur. Inventore dolore sed explicabo reprehenderit architecto, voluptas repudiandae quisquam temporibus eveniet voluptates suscipit vero corporis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus in modi magni exercitationem molestiae quidem quisquam, ipsam maxime unde laborum ad reiciendis, dolorem molestias tempora dolore officiis deleniti recusandae asperiores?
+    Commodi natus ut alias cupiditate reiciendis non, saepe tempora blanditiis dicta ex, ullam tenetur quisquam veniam aut cum iste voluptatum aliquid magnam animi magni voluptatem. Numquam eos consequatur vitae officia.
+    Nesciunt dolor qui itaque odio natus nobis mollitia nam velit rem corporis saepe dolores inventore eveniet adipisci et deleniti explicabo aliquam totam dolore quod quasi, quisquam ipsam veritatis officia. Rem.
+    Blanditiis voluptatum perspiciatis magni dolorem incidunt, facilis et sapiente.<br> Cum fuga minima nam nulla, facere harum exercitationem eveniet aliquid voluptatum ab, cumque expedita, illum temporibus libero officiis placeat? Amet, dolore?
+    Nesciunt reprehenderit, eveniet, dignissimos quibusdam veritatis alias molestias in eum perspiciatis earum magnam laudantium illum, id autem numquam libero assumenda voluptates. Soluta veritatis architecto, aliquam pariatur ullam aut libero dolores!
+    Culpa aliquam, debitis quis odit earum, harum iusto aut voluptas libero nemo aspernatur qui voluptate laudantium assumenda facilis inventore optio corrupti.<br> Accusantium, pariatur corporis. Expedita asperiores facilis explicabo corrupti ipsa!
+    Suscipit repellendus deleniti sit odit. Doloremque, doloribus beatae ab magni tenetur adipisci ullam. Blanditiis tempore dolorum suscipit molestias unde? Omnis officia ullam aliquid laudantium cumque modi veritatis nisi nesciunt at?
+    Vel deserunt cupiditate harum beatae aspernatur. Ratione laborum asperiores culpa rerum molestias odio eveniet? Aperiam dicta sunt facere? Iste itaque dolor cumque delectus aut rem dicta illo omnis aliquid quod!
+    Perspiciatis optio voluptas error illum, non sed blanditiis praesentium illo temporibus saepe veniam atque, rem quas at, rerum ipsa maxime ex possimus. Debitis hic ab assumenda architecto tempore ratione minus!
+    Possimus ad qui maiores exercitationem, quidem explicabo labore illum ipsum quibusdam in neque ipsam id eius, perspiciatis doloremque suscipit nulla, culpa sapiente at repellat impedit.<br> Quo dolorum ullam exercitationem. Numquam.
+    Nemo doloremque minus perspiciatis labore beatae, aliquid saepe. Earum vel asperiores exercitationem dignissimos laudantium tempore eum aperiam, repellendus mollitia similique architecto sunt quam qui reiciendis incidunt nam! Vero, mollitia error?
+    Deserunt nostrum eos architecto asperiores autem distinctio animi. Inventore asperiores incidunt blanditiis, rem eaque aspernatur odio magnam minus numquam dolorum molestiae nihil accusamus velit ipsum repellat cumque eveniet sunt sint.
+    Accusamus, officia qui? Fugiat nostrum illo enim impedit quasi repellat ipsum aliquam quo molestias quae eos cupiditate exercitationem a officiis tempore modi cumque reprehenderit error aliquid nobis, reiciendis ipsa. Sunt?
+    Expedita voluptatem odit similique omnis neque quos laborum illum beatae molestiae quis. Excepturi voluptatibus, temporibus adipisci, repellendus animi id magni delectus debitis provident voluptatum facere, velit ea aperiam voluptas odio!
+    Nostrum aliquid maxime a, necessitatibus quia sint quos blanditiis sunt! Libero voluptate labore modi facilis, inventore qui esse sunt voluptates reprehenderit praesentium ex, eos exercitationem, sapiente perferendis animi dicta quisquam.
+    At repellat incidunt odio accusantium ipsam nobis id exercitationem quidem ea saepe illo voluptatibus officia, consequatur corporis voluptate! Assumenda, aperiam excepturi ullam asperiores similique rem eveniet magnam deleniti accusantium delectus!
+    Debitis inventore doloremque delectus cum quos ut eos odio dolorum libero quae eius animi quia, architecto corporis.<br> Sequi molestias officia architecto deleniti vel? Eaque recusandae nulla delectus velit quod dicta.
+    Reiciendis tempore unde et magnam asperiores nihil nisi sit reprehenderit assumenda autem eveniet quibusdam vitae laboriosam, maxime quisquam similique veniam quae dolor? Pariatur earum quisquam, laborum fuga adipisci doloribus dolore!
+    Qui, porro, rem velit fugit aspernatur unde iure vel id, animi blanditiis perferendis ea maxime nemo quis tenetur. Odio quasi quisquam pariatur et obcaecati. Vero laboriosam tenetur iusto sapiente alias.
+    Asperiores doloribus iure, provident est voluptatem consequatur natus incidunt similique, accusamus cum praesentium ut consequuntur ipsum eaque nostrum doloremque? Possimus, iste esse voluptatum dolores perspiciatis quidem nulla rem illo necessitatibus!
 
 </body>
 </html>
